Fix the CropperFade styles

--- a/src/components/service/CropperFade.scss
+++ b/src/components/service/CropperFade.scss
@@ -8,6 +8,5 @@
 	&--visible {
 		opacity: 1;
 		visibility: visible;
-		color: black;
 	}
 }
